Handle *OPENALL*